kubernetes/stats.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats
  template:
    metadata:
      labels:
        app: stats
    spec:
      containers:
        - name: stats
          image: kubernetes-assignment-stats:v5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
          readinessProbe:
            httpGet:
              path: /ready
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: stats
  namespace: microservices
  labels:
    app: stats
spec:
  type: ClusterIP
  selector:
    app: stats
  ports:
    - port: 3002
      targetPort: 3002
