kubernetes/api-gateway-ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: api-gateway-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: api-gateway
                port:
                  number: 3000
